outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval6835286912925988614_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as a weighted sum of immediate proximity and long-term potential, with the latter's influence decaying exponentially based on the remaining distance to the destination.}
                                                                                             ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as a weighted sum of immediate proximity and long-term potential, with the latter's influence decaying exponentially based on the remaining distance to the destination.}
                                                                                             ^
SyntaxError: unterminated string literal (detected at line 1)
